feat: fixed docker containers
